// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly with one child 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View />
  </View>
</RCTSafeAreaView>
`;

exports[`should render properly with several children 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View />
    <Text>
      'Hello'
    </Text>
  </View>
</RCTSafeAreaView>
`;
